--- a/leyre-lopez-de-silanes-torres.ipynb
+++ b/leyre-lopez-de-silanes-torres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +207,22 @@
     "          \n",
     "        for cliente in self.clientes:\n",
     "            \n",
-    "            print(f\"Nombre: {cliente}, Email: {self.clientes[cliente][\"email\"]}\") # Para buscar un valor dentro de un subdiccionario\n"
+    "            print(f\"Nombre: {cliente}, Email: {self.clientes[cliente][\"email\"]}\") # Para buscar un valor dentro de un subdiccionario\n",
+    "\n",
+    "    \n",
+    "    def ver_compras_cliente (self, nombre_cliente):\n",
+    "        \n",
+    "        nombre_cliente = nombre_cliente.capitalize()\n",
+    "        \n",
+    "        if nombre_cliente in self.clientes.keys():\n",
+    "            \n",
+    "            print(f\"Nombre: {nombre_cliente}, Compras: {self.clientes[nombre_cliente][\"compras\"]}\")\n",
+    "                   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -381,11 +391,11 @@
       "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
       "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
       "Nombre: Vestido, Precio: $40, Cantidad: 10\n",
-      "No nos queda pantalones en la tienda.\n",
       "Nuestro stock es:\n",
       "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
       "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
-      "Nombre: Vestido, Precio: $40, Cantidad: 10\n",
+      "Nombre: Vestido, Precio: $40, Cantidad: 6\n",
+      "No nos queda pantalones en la tienda.\n",
       "Nuestro stock es:\n",
       "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
       "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
@@ -401,7 +411,7 @@
        "'El coste total de la compra es: $220'"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +439,7 @@
        "'Pago exitoso. El cambio es de $49.5.'"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La cantidad total a pagar son $200.0.\n"
+      "La cantidad total a pagar son $200.5.\n"
      ]
     },
     {
@@ -458,7 +468,7 @@
        "'Lo que has indicado no es válido. Por favor, indica un número válido.'"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -492,6 +502,8 @@
     }
    ],
    "source": [
+    "# Agregamos a los clientes:\n",
+    "\n",
     "mi_tienda.agregar_cliente(\"Lola\", \"lola1@gmail.com\")\n",
     "mi_tienda.agregar_cliente(\"Jose\", \"jose1@gmail.com\")\n",
     "mi_tienda.agregar_cliente(\"Laura\", \"laura1@gmail.com\")\n",
@@ -507,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -525,6 +537,44 @@
     "# Queremos sacar la lista de clientes con nombre y correo:\n",
     "\n",
     "mi_tienda.ver_clientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Pablo, Compras: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Queremos ver las compras que ha hecho un cliente:\n",
+    "\n",
+    "mi_tienda.ver_compras_cliente(\"Pablo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Jose, Compras: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comprobación del método capitalize()\n",
+    "\n",
+    "mi_tienda.ver_compras_cliente(\"jose\")"
    ]
   }
  ],
