--- a/leyre-lopez-de-silanes-torres.ipynb
+++ b/leyre-lopez-de-silanes-torres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "            if producto [\"nombre\"].lower() == nombre: \n",
     "                producto [\"cantidad\"] += cantidad\n",
     "                \n",
-    "                return f\"El producto ya existe, por lo que se ha actualizado la cantidad disponible a {producto[\"cantidad\"]} {nombre}.\"\n",
+    "                return f'El producto ya existe, por lo que se ha actualizado la cantidad disponible a {producto[\"cantidad\"]} {nombre}.'\n",
     "            else:\n",
     "                pass\n",
     "        \n",
@@ -208,21 +208,12 @@
     "        for cliente in self.clientes:\n",
     "            \n",
     "            print(f\"Nombre: {cliente}, Email: {self.clientes[cliente][\"email\"]}\") # Para buscar un valor dentro de un subdiccionario\n",
-    "\n",
-    "    \n",
-    "    def ver_compras_cliente (self, nombre_cliente):\n",
-    "        \n",
-    "        nombre_cliente = nombre_cliente.capitalize()\n",
-    "        \n",
-    "        if nombre_cliente in self.clientes.keys():\n",
-    "            \n",
-    "            print(f\"Nombre: {nombre_cliente}, Compras: {self.clientes[nombre_cliente][\"compras\"]}\")\n",
-    "                   \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,30 +379,25 @@
       "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
       "Nombre: Vestido, Precio: $40, Cantidad: 10\n",
       "Nuestro stock es:\n",
-      "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
+      "Nombre: Camiseta, Precio: $20, Cantidad: 233\n",
       "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
       "Nombre: Vestido, Precio: $40, Cantidad: 10\n",
       "Nuestro stock es:\n",
-      "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
-      "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
-      "Nombre: Vestido, Precio: $40, Cantidad: 6\n",
-      "No nos queda pantalones en la tienda.\n",
-      "Nuestro stock es:\n",
-      "Nombre: Camiseta, Precio: $20, Cantidad: 232\n",
-      "Nombre: Zapatos, Precio: $30, Cantidad: 190\n",
-      "Nombre: Vestido, Precio: $40, Cantidad: 6\n",
+      "Nombre: Camiseta, Precio: $20, Cantidad: 233\n",
+      "Nombre: Zapatos, Precio: $30, Cantidad: 187\n",
+      "Nombre: Vestido, Precio: $40, Cantidad: 10\n",
       "El carrito de la compra es:\n",
-      "Nombre: Camiseta, Precio: $20, Cantidad: 3\n",
-      "Nombre: Vestido, Precio: $40, Cantidad: 4\n"
+      "Nombre: Camiseta, Precio: $20, Cantidad: 2\n",
+      "Nombre: Zapatos, Precio: $30, Cantidad: 3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'El coste total de la compra es: $220'"
+       "'El coste total de la compra es: $130'"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,24 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La cantidad total a pagar son $200.5.\n",
-      "La cantidad que el cliente da es de $250.0.\n"
+      "La cantidad total a pagar son $130.0.\n",
+      "La cantidad que el cliente da es de $200.0.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Pago exitoso. El cambio es de $49.5.'"
+       "'Pago exitoso. El cambio es de $70.0.'"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,36 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La cantidad total a pagar son $200.5.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Lo que has indicado no es válido. Por favor, indica un número válido.'"
-      ]
-     },
-     "execution_count": 397,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Probamos que cualquier otro valor que no sea float nos de el except:\n",
-    "\n",
-    "mi_tienda.procesar_pago()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -537,44 +494,6 @@
     "# Queremos sacar la lista de clientes con nombre y correo:\n",
     "\n",
     "mi_tienda.ver_clientes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 400,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre: Pablo, Compras: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Queremos ver las compras que ha hecho un cliente:\n",
-    "\n",
-    "mi_tienda.ver_compras_cliente(\"Pablo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 401,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre: Jose, Compras: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Comprobación del método capitalize()\n",
-    "\n",
-    "mi_tienda.ver_compras_cliente(\"jose\")"
    ]
   }
  ],
@@ -594,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
